--- a/index.html
+++ b/index.html
@@ -11,169 +11,188 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--Header section-->
     <header class="header">
-      <a class="logo" href="" lang="en"><span class="logo-word">Web</span>Studio</a>
-      <nav>
-        <ul class="site-nav list">
+      <div class="container">
+        <a class="logo" href="" lang="en"><span class="logo-word">Web</span>Studio</a>
+        <nav>
+          <ul class="site-nav list">
+            <li>
+              <a class="link current" href="./index.html">Студия</a>
+            </li>
+            <li>
+              <a class="link" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li>
+              <a class="link" href="#contacts">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="contacts list">
           <li>
-            <a class="link current" href="./index.html">Студия</a>
+            <a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li>
-            <a class="link" href="./portfolio.html">Портфолио</a>
-          </li>
-          <li>
-            <a class="link" href="#contacts">Контакты</a>
-          </li>
+          <li><a class="contacts-link link" href="phone:+380991111111">+38 099 111 11 11</a></li>
         </ul>
-      </nav>
-      <ul class="contacts list">
-        <li>
-          <a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li><a class="contacts-link link" href="phone:+380991111111">+38 099 111 11 11</a></li>
-      </ul>
+      </div>
     </header>
     <!--Main section-->
     <main>
       <!--Hero section-->
       <section class="hero">
-        <h1 class="hero-title">эффективные решения для вашего бизнеса</h1>
-        <button class="hero-button" type="button">Заказать услугу</button>
+        <div class="container">
+          <h1 class="hero-title">эффективные решения для вашего бизнеса</h1>
+          <button class="hero-button" type="button">Заказать услугу</button>
+        </div>
       </section>
 
       <!--Features section-->
       <section class="features" id="studio">
-        <h2 hidden>Студия</h2>
-        <ul class="features-list list">
-          <li class="features-item">
-            <h3 class="features-title">Внимание к деталям</h3>
-            <p class="features-discription">
-              Идейные соображения, а также начало повседневной работы по формированию позиции.
-            </p>
-          </li>
+        <div class="container">
+          <h2 class="visually-hidden">Студия</h2>
+          <ul class="features-list list">
+            <li class="features-item">
+              <h3 class="features-title">Внимание к деталям</h3>
+              <p class="features-discription">
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
+            </li>
 
-          <li class="features-item">
-            <h3 class="features-title">Пунктуальность</h3>
-            <p class="features-discription">
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
+            <li class="features-item">
+              <h3 class="features-title">Пунктуальность</h3>
+              <p class="features-discription">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
+            </li>
 
-          <li class="features-item">
-            <h3 class="features-title">Планирование</h3>
-            <p class="features-discription">
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
+            <li class="features-item">
+              <h3 class="features-title">Планирование</h3>
+              <p class="features-discription">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </li>
 
-          <li class="features-item">
-            <h3 class="features-title">Современные технологии</h3>
-            <p class="features-discription">
-              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-            </p>
-          </li>
-        </ul>
+            <li class="features-item">
+              <h3 class="features-title">Современные технологии</h3>
+              <p class="features-discription">
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--About section-->
       <section class="section" id="portfolio">
-        <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul class="about-list list">
-          <li class="about-item">
-            <img src="./images/about/img1.jpg" alt="Разработка" width="370" height="295" />
-          </li>
-          <li class="about-item">
-            <img
-              src="./images/about/img2.jpg"
-              alt="Приложения в телефоне"
-              width="370"
-              height="295"
-            />
-          </li>
-          <li class="about-item">
-            <img src="./images/about/img3.jpg" alt="Планшет" width="370" height="295" />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Чем мы занимаемся</h2>
+          <ul class="about-list list">
+            <li class="about-item">
+              <img src="./images/about/img1.jpg" alt="Разработка" width="370" height="295" />
+            </li>
+            <li class="about-item">
+              <img
+                src="./images/about/img2.jpg"
+                alt="Приложения в телефоне"
+                width="370"
+                height="295"
+              />
+            </li>
+            <li class="about-item">
+              <img src="./images/about/img3.jpg" alt="Планшет" width="370" height="295" />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--Team section-->
       <section class="team-section">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="team-list list">
-          <li class="teaam-item">
-            <img
-              src="./images/team/card1.jpg"
-              alt="Игорь"
-              class="team-img"
-              width="270"
-              height="260"
-            />
-            <h3 class="subtitle">Игорь Демьяненко</h3>
-            <p class="team-position" lang="en">Product Designer</p>
-          </li>
-          <li class="teaam-item">
-            <img
-              class="team-img"
-              src="./images/team/card2.jpg"
-              alt="Ольга"
-              width="270"
-              height="260"
-            />
-            <h3 class="subtitle">Ольга Репина</h3>
-            <p class="team-position" lang="en">Frontend Develope</p>
-          </li>
-          <li class="teaam-item">
-            <img
-              class="team-img"
-              src="./images/team/card3.jpg"
-              alt="Николай"
-              width="270"
-              height="260"
-            />
-            <h3 class="subtitle">Николай Тарасов</h3>
-            <p class="team-position" lang="en">Frontend Develope</p>
-          </li>
-          <li class="teaam-item">
-            <img
-              class="team-img"
-              src="./images/team/card4.jpg"
-              alt="Михаил"
-              width="270"
-              height="260"
-            />
-            <h3 class="subtitle">Михаил Ермаков</h3>
-            <p class="team-position" lang="en">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Наша команда</h2>
+          <ul class="team-list list">
+            <li class="teaam-item">
+              <img
+                src="./images/team/card1.jpg"
+                alt="Игорь"
+                class="team-img"
+                width="270"
+                height="260"
+              />
+              <h3 class="subtitle">Игорь Демьяненко</h3>
+              <p class="team-position" lang="en">Product Designer</p>
+            </li>
+            <li class="teaam-item">
+              <img
+                class="team-img"
+                src="./images/team/card2.jpg"
+                alt="Ольга"
+                width="270"
+                height="260"
+              />
+              <h3 class="subtitle">Ольга Репина</h3>
+              <p class="team-position" lang="en">Frontend Develope</p>
+            </li>
+            <li class="teaam-item">
+              <img
+                class="team-img"
+                src="./images/team/card3.jpg"
+                alt="Николай"
+                width="270"
+                height="260"
+              />
+              <h3 class="subtitle">Николай Тарасов</h3>
+              <p class="team-position" lang="en">Frontend Develope</p>
+            </li>
+            <li class="teaam-item">
+              <img
+                class="team-img"
+                src="./images/team/card4.jpg"
+                alt="Михаил"
+                width="270"
+                height="260"
+              />
+              <h3 class="subtitle">Михаил Ермаков</h3>
+              <p class="team-position" lang="en">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!--Footer sectoin-->
     <footer class="footer" id="contacts">
-      <a class="logo" href="" lang="en"><span class="footer-word">Web</span>Studio</a>
-      <address class="contacts-adressa">
-        <ul class="fcontacts-list list">
-          <li class="contacts-item">
-            <a
-              class="contacts-adress"
-              href="https://goo.gl/maps/fYD2F2hj4Bph8xJn6"
-              target="_blank"
-              rel="noopener"
-              >г. Киев, Бульвар Леси Украинки, 26</a
-            >
-          </li>
-          <li class="contacts-item">
-            <a class="contacts-link" href="mailto:info@example.com">info@example.com</a>
-          </li>
-          <li class="contacts-item">
-            <a class="contacts-link" href="phone:+380991111111">+38 099 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a class="logo" href="" lang="en"><span class="footer-word">Web</span>Studio</a>
+        <address class="contacts-adressa">
+          <ul class="fcontacts-list list">
+            <li class="contacts-item">
+              <a
+                class="contacts-adress"
+                href="https://goo.gl/maps/fYD2F2hj4Bph8xJn6"
+                target="_blank"
+                rel="noopener"
+                >г. Киев, Бульвар Леси Украинки, 26</a
+              >
+            </li>
+            <li class="contacts-item">
+              <a class="contacts-link" href="mailto:info@example.com">info@example.com</a>
+            </li>
+            <li class="contacts-item">
+              <a class="contacts-link" href="phone:+380991111111">+38 099 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
