--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,13 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -31,7 +38,9 @@
         </ul>
       </nav>
       <ul class="contacts list">
-        <li><a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li>
+          <a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
         <li><a class="contacts-link link" href="phone:+380991111111">+38 099 111 11 11</a></li>
       </ul>
     </header>
@@ -61,7 +70,7 @@
 
       <!--Portfolio-->
       <section class="portfolio">
-        <h1 hidden>Портфолио</h1>
+        <h1 class="visually-hidden">Портфолио</h1>
         <ul class="portfolio-list list">
           <li class="portfolio-item">
             <a class="link" href="">
