--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <body>
     <!--Header section-->
     <header class="header">
+      <a class="logo" href="" lang="en"><span class="logo-word">Web</span>Studio</a>
       <div class="container">
-        <a class="logo" href="" lang="en"><span class="logo-word">Web</span>Studio</a>
         <nav>
           <ul class="site-nav list">
             <li>
@@ -38,6 +38,7 @@
             </li>
           </ul>
         </nav>
+
         <ul class="contacts list">
           <li>
             <a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -50,15 +51,13 @@
     <main>
       <!--Hero section-->
       <section class="hero">
-        <div class="container">
-          <h1 class="hero-title">эффективные решения для вашего бизнеса</h1>
-          <button class="hero-button" type="button">Заказать услугу</button>
-        </div>
+        <h1 class="hero-title">эффективные решения для вашего бизнеса</h1>
+        <button class="hero-button" type="button">Заказать услугу</button>
       </section>
 
       <!--Features section-->
       <section class="features" id="studio">
-        <div class="container">
+        <div class="section">
           <h2 class="visually-hidden">Студия</h2>
           <ul class="features-list list">
             <li class="features-item">
@@ -94,105 +93,99 @@
 
       <!--About section-->
       <section class="section" id="portfolio">
-        <div class="container">
-          <h2 class="section-title">Чем мы занимаемся</h2>
-          <ul class="about-list list">
-            <li class="about-item">
-              <img src="./images/about/img1.jpg" alt="Разработка" width="370" height="295" />
-            </li>
-            <li class="about-item">
-              <img
-                src="./images/about/img2.jpg"
-                alt="Приложения в телефоне"
-                width="370"
-                height="295"
-              />
-            </li>
-            <li class="about-item">
-              <img src="./images/about/img3.jpg" alt="Планшет" width="370" height="295" />
-            </li>
-          </ul>
-        </div>
+        <h2 class="section-title centered">Чем мы занимаемся</h2>
+        <ul class="about-list list">
+          <li class="about-item">
+            <img src="./images/about/img1.jpg" alt="Разработка" width="370" height="295" />
+          </li>
+          <li class="about-item">
+            <img
+              src="./images/about/img2.jpg"
+              alt="Приложения в телефоне"
+              width="370"
+              height="295"
+            />
+          </li>
+          <li class="about-item">
+            <img src="./images/about/img3.jpg" alt="Планшет" width="370" height="295" />
+          </li>
+        </ul>
       </section>
 
       <!--Team section-->
       <section class="team-section">
-        <div class="container">
-          <h2 class="section-title">Наша команда</h2>
-          <ul class="team-list list">
-            <li class="teaam-item">
-              <img
-                src="./images/team/card1.jpg"
-                alt="Игорь"
-                class="team-img"
-                width="270"
-                height="260"
-              />
-              <h3 class="subtitle">Игорь Демьяненко</h3>
-              <p class="team-position" lang="en">Product Designer</p>
-            </li>
-            <li class="teaam-item">
-              <img
-                class="team-img"
-                src="./images/team/card2.jpg"
-                alt="Ольга"
-                width="270"
-                height="260"
-              />
-              <h3 class="subtitle">Ольга Репина</h3>
-              <p class="team-position" lang="en">Frontend Develope</p>
-            </li>
-            <li class="teaam-item">
-              <img
-                class="team-img"
-                src="./images/team/card3.jpg"
-                alt="Николай"
-                width="270"
-                height="260"
-              />
-              <h3 class="subtitle">Николай Тарасов</h3>
-              <p class="team-position" lang="en">Frontend Develope</p>
-            </li>
-            <li class="teaam-item">
-              <img
-                class="team-img"
-                src="./images/team/card4.jpg"
-                alt="Михаил"
-                width="270"
-                height="260"
-              />
-              <h3 class="subtitle">Михаил Ермаков</h3>
-              <p class="team-position" lang="en">UI Designer</p>
-            </li>
-          </ul>
-        </div>
+        <h2 class="section-title">Наша команда</h2>
+        <ul class="team-list list">
+          <li class="teaam-item">
+            <img
+              src="./images/team/card1.jpg"
+              alt="Игорь"
+              class="team-img"
+              width="270"
+              height="260"
+            />
+            <h3 class="subtitle">Игорь Демьяненко</h3>
+            <p class="team-position" lang="en">Product Designer</p>
+          </li>
+          <li class="teaam-item">
+            <img
+              class="team-img"
+              src="./images/team/card2.jpg"
+              alt="Ольга"
+              width="270"
+              height="260"
+            />
+            <h3 class="subtitle">Ольга Репина</h3>
+            <p class="team-position" lang="en">Frontend Develope</p>
+          </li>
+          <li class="teaam-item">
+            <img
+              class="team-img"
+              src="./images/team/card3.jpg"
+              alt="Николай"
+              width="270"
+              height="260"
+            />
+            <h3 class="subtitle">Николай Тарасов</h3>
+            <p class="team-position" lang="en">Frontend Develope</p>
+          </li>
+          <li class="teaam-item">
+            <img
+              class="team-img"
+              src="./images/team/card4.jpg"
+              alt="Михаил"
+              width="270"
+              height="260"
+            />
+            <h3 class="subtitle">Михаил Ермаков</h3>
+            <p class="team-position" lang="en">UI Designer</p>
+          </li>
+        </ul>
       </section>
     </main>
 
     <!--Footer sectoin-->
     <footer class="footer" id="contacts">
-      <div class="container">
-        <a class="logo" href="" lang="en"><span class="footer-word">Web</span>Studio</a>
-        <address class="contacts-adressa">
-          <ul class="fcontacts-list list">
-            <li class="contacts-item">
-              <a
-                class="contacts-adress"
-                href="https://goo.gl/maps/fYD2F2hj4Bph8xJn6"
-                target="_blank"
-                rel="noopener"
-                >г. Киев, Бульвар Леси Украинки, 26</a
-              >
-            </li>
-            <li class="contacts-item">
-              <a class="contacts-link" href="mailto:info@example.com">info@example.com</a>
-            </li>
-            <li class="contacts-item">
-              <a class="contacts-link" href="phone:+380991111111">+38 099 111 11 11</a>
-            </li>
-          </ul>
-        </address>
-      </div>
+      <a class="logo" href="" lang="en"><span class="footer-word">Web</span>Studio</a>
+      <address class="contacts-adressa">
+        <ul class="fcontacts-list list">
+          <li class="contacts-item">
+            <a
+              class="contacts-adress"
+              href="https://goo.gl/maps/fYD2F2hj4Bph8xJn6"
+              target="_blank"
+              rel="noopener"
+              >г. Киев, Бульвар Леси Украинки, 26</a
+            >
+          </li>
+          <li class="contacts-item">
+            <a class="contacts-link" href="mailto:info@example.com">info@example.com</a>
+          </li>
+          <li class="contacts-item">
+            <a class="contacts-link" href="phone:+380991111111">+38 099 111 11 11</a>
+          </li>
+        </ul>
+      </address>
     </footer>
   </body>
 </html>
