--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
       <!--Features section-->
       <section class="features" id="studio">
-        <div class="section">
+        <div class="container">
           <h2 class="visually-hidden">Студия</h2>
           <ul class="features-list list">
             <li class="features-item">
@@ -92,7 +92,8 @@
       </section>
 
       <!--About section-->
-      <section class="section" id="portfolio">
+      <section class="section no-padding" id="portfolio">
+        <div class="container">
         <h2 class="section-title centered">Чем мы занимаемся</h2>
         <ul class="about-list list">
           <li class="about-item">
@@ -110,10 +111,12 @@
             <img src="./images/about/img3.jpg" alt="Планшет" width="370" height="295" />
           </li>
         </ul>
+      </div>
       </section>
 
       <!--Team section-->
-      <section class="team-section">
+      <section class="team-section section">
+        <div class="container">
         <h2 class="section-title">Наша команда</h2>
         <ul class="team-list list">
           <li class="teaam-item">
@@ -161,6 +164,7 @@
             <p class="team-position" lang="en">UI Designer</p>
           </li>
         </ul>
+      </div>
       </section>
     </main>
 
