--- a/index.html
+++ b/index.html
@@ -23,27 +23,27 @@
   <body>
     <!--Header section-->
     <header class="header">
-      <a class="logo" href="" lang="en"><span class="logo-word">Web</span>Studio</a>
-      <div class="container">
-        <nav>
+      <div class="container header-container">
+        <a class="logo" href="" lang="en"><span class="logo-word">Web</span>Studio</a>
+        <nav class="header-nav">
           <ul class="site-nav list">
-            <li>
+            <li class="header-item">
               <a class="link current" href="./index.html">Студия</a>
             </li>
-            <li>
+            <li class="header-item">
               <a class="link" href="./portfolio.html">Портфолио</a>
             </li>
-            <li>
+            <li class="header-item">
               <a class="link" href="#contacts">Контакты</a>
             </li>
           </ul>
         </nav>
 
-        <ul class="contacts list">
-          <li>
+        <ul class="contacts list header-container">
+          <li class="header-mail">
             <a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li><a class="contacts-link link" href="phone:+380991111111">+38 099 111 11 11</a></li>
+          <li class="header-phone"><a class="contacts-link link" href="phone:+380991111111">+38 099 111 11 11</a></li>
         </ul>
       </div>
     </header>
@@ -94,83 +94,84 @@
       <!--About section-->
       <section class="section no-padding" id="portfolio">
         <div class="container">
-        <h2 class="section-title centered">Чем мы занимаемся</h2>
-        <ul class="about-list list">
-          <li class="about-item">
-            <img src="./images/about/img1.jpg" alt="Разработка" width="370" height="295" />
-          </li>
-          <li class="about-item">
-            <img
-              src="./images/about/img2.jpg"
-              alt="Приложения в телефоне"
-              width="370"
-              height="295"
-            />
-          </li>
-          <li class="about-item">
-            <img src="./images/about/img3.jpg" alt="Планшет" width="370" height="295" />
-          </li>
-        </ul>
-      </div>
+          <h2 class="section-title centered">Чем мы занимаемся</h2>
+          <ul class="about-list list">
+            <li class="about-item">
+              <img src="./images/about/img1.jpg" alt="Разработка" width="370" height="295" />
+            </li>
+            <li class="about-item">
+              <img
+                src="./images/about/img2.jpg"
+                alt="Приложения в телефоне"
+                width="370"
+                height="295"
+              />
+            </li>
+            <li class="about-item">
+              <img src="./images/about/img3.jpg" alt="Планшет" width="370" height="295" />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--Team section-->
       <section class="team-section section">
         <div class="container">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="team-list list">
-          <li class="teaam-item">
-            <img
-              src="./images/team/card1.jpg"
-              alt="Игорь"
-              class="team-img"
-              width="270"
-              height="260"
-            />
-            <h3 class="subtitle">Игорь Демьяненко</h3>
-            <p class="team-position" lang="en">Product Designer</p>
-          </li>
-          <li class="teaam-item">
-            <img
-              class="team-img"
-              src="./images/team/card2.jpg"
-              alt="Ольга"
-              width="270"
-              height="260"
-            />
-            <h3 class="subtitle">Ольга Репина</h3>
-            <p class="team-position" lang="en">Frontend Develope</p>
-          </li>
-          <li class="teaam-item">
-            <img
-              class="team-img"
-              src="./images/team/card3.jpg"
-              alt="Николай"
-              width="270"
-              height="260"
-            />
-            <h3 class="subtitle">Николай Тарасов</h3>
-            <p class="team-position" lang="en">Frontend Develope</p>
-          </li>
-          <li class="teaam-item">
-            <img
-              class="team-img"
-              src="./images/team/card4.jpg"
-              alt="Михаил"
-              width="270"
-              height="260"
-            />
-            <h3 class="subtitle">Михаил Ермаков</h3>
-            <p class="team-position" lang="en">UI Designer</p>
-          </li>
-        </ul>
-      </div>
+          <h2 class="section-title">Наша команда</h2>
+          <ul class="team-listt list">
+            <li class="teaam-item">
+              <img
+                src="./images/team/card1.jpg"
+                alt="Игорь"
+                class="team-img"
+                width="270"
+                height="260"
+              />
+              <h3 class="subtitle">Игорь Демьяненко</h3>
+              <p class="team-position" lang="en">Product Designer</p>
+            </li>
+            <li class="teaam-item">
+              <img
+                class="team-img"
+                src="./images/team/card2.jpg"
+                alt="Ольга"
+                width="270"
+                height="260"
+              />
+              <h3 class="subtitle">Ольга Репина</h3>
+              <p class="team-position" lang="en">Frontend Develope</p>
+            </li>
+            <li class="teaam-item">
+              <img
+                class="team-img"
+                src="./images/team/card3.jpg"
+                alt="Николай"
+                width="270"
+                height="260"
+              />
+              <h3 class="subtitle">Николай Тарасов</h3>
+              <p class="team-position" lang="en">Frontend Develope</p>
+            </li>
+            <li class="teaam-item">
+              <img
+                class="team-img"
+                src="./images/team/card4.jpg"
+                alt="Михаил"
+                width="270"
+                height="260"
+              />
+              <h3 class="subtitle">Михаил Ермаков</h3>
+              <p class="team-position" lang="en">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!--Footer sectoin-->
     <footer class="footer" id="contacts">
       <a class="logo" href="" lang="en"><span class="footer-word">Web</span>Studio</a>
+      <div class="footer-container">
       <address class="contacts-adressa">
         <ul class="fcontacts-list list">
           <li class="contacts-item">
@@ -190,6 +191,7 @@
           </li>
         </ul>
       </address>
+    </div>
     </footer>
   </body>
 </html>
