--- a/portfolio.html
+++ b/portfolio.html
@@ -70,6 +70,7 @@
 
       <!--Portfolio-->
       <section class="portfolio">
+        <div class="container">
         <h1 class="visually-hidden">Портфолио</h1>
         <ul class="portfolio-list list">
           <li class="portfolio-item">
@@ -138,7 +139,7 @@
             </a>
           </li>
           <li class="portfolio-item">
-            <a href="">
+            <a class="link" href="">
               <img
                 src="./images/portfolio/imgmonitor.jpg"
                 alt="монитор"
@@ -146,7 +147,7 @@
                 width="370"
                 height="294"
               />
-              <h2 lang="en" class="title">Inspiration has no Borders</h2>
+              <h2 class="title" lang="en">Inspiration has no Borders</h2>
               <p class="text">Веб-сайт</p>
             </a>
           </li>
@@ -190,6 +191,7 @@
             </a>
           </li>
         </ul>
+      </div>
       </section>
     </main>
 
