--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
           <li class="header-mail">
             <a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li class="header-phone"><a class="contacts-link link" href="phone:+380991111111">+38 099 111 11 11</a></li>
+          <li class="header-phone">
+            <a class="contacts-link link" href="phone:+380991111111">+38 099 111 11 11</a>
+          </li>
         </ul>
       </div>
     </header>
@@ -51,7 +53,9 @@
     <main>
       <!--Hero section-->
       <section class="hero">
-        <h1 class="hero-title">эффективные решения для вашего бизнеса</h1>
+        <div class="hero-container">
+          <h1 class="hero-title">эффективные решения для вашего бизнеса</h1>
+        </div>
         <button class="hero-button" type="button">Заказать услугу</button>
       </section>
 
@@ -170,28 +174,30 @@
 
     <!--Footer sectoin-->
     <footer class="footer" id="contacts">
-      <a class="logo" href="" lang="en"><span class="footer-word">Web</span>Studio</a>
+      <div class="footer-logo">
+        <a class="logo" href="" lang="en"><span class="footer-word">Web</span>Studio</a>
+      </div>
       <div class="footer-container">
-      <address class="contacts-adressa">
-        <ul class="fcontacts-list list">
-          <li class="contacts-item">
-            <a
-              class="contacts-adress"
-              href="https://goo.gl/maps/fYD2F2hj4Bph8xJn6"
-              target="_blank"
-              rel="noopener"
-              >г. Киев, Бульвар Леси Украинки, 26</a
-            >
-          </li>
-          <li class="contacts-item">
-            <a class="contacts-link" href="mailto:info@example.com">info@example.com</a>
-          </li>
-          <li class="contacts-item">
-            <a class="contacts-link" href="phone:+380991111111">+38 099 111 11 11</a>
-          </li>
-        </ul>
-      </address>
-    </div>
+        <address class="contacts-adressa">
+          <ul class="fcontacts-list list">
+            <li class="contacts-item">
+              <a
+                class="contacts-adress"
+                href="https://goo.gl/maps/fYD2F2hj4Bph8xJn6"
+                target="_blank"
+                rel="noopener"
+                >г. Киев, Бульвар Леси Украинки, 26</a
+              >
+            </li>
+            <li class="contacts-item">
+              <a class="contacts-link" href="mailto:info@example.com">info@example.com</a>
+            </li>
+            <li class="contacts-item">
+              <a class="contacts-link" href="phone:+380991111111">+38 099 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
