--- a/portfolio.html
+++ b/portfolio.html
@@ -23,200 +23,228 @@
   <body>
     <!--Header section-->
     <header class="header">
-      <a class="logo" href="" lang="en"><span class="logo-word">Web</span>Studio</a>
-      <nav>
-        <ul class="site-nav list">
-          <li class="header-item">
-            <a class="link" href="./index.html">Студия</a>
+      <div class="container header-section">
+        <a class="logo" href="" lang="en"><span class="logo-word">Web</span>Studio</a>
+        <nav>
+          <ul class="site-nav list">
+            <li class="header-item">
+              <a class="link" href="./index.html">Студия</a>
+            </li>
+            <li class="header-item">
+              <a class="link current" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="header-item">
+              <a class="link" href="#contacts">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <div class="container-contacts">
+        <ul class="contacts list header-container">
+          <li class="header-mail">
+            <a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li class="header-item">
-            <a class="link current" href="./portfolio.html">Портфолио</a>
-          </li>
-          <li class="header-item">
-            <a class="link" href="#contacts">Контакты</a>
+          <li class="header-phone">
+            <a class="contacts-link link" href="phone:+380991111111">+38 099 111 11 11</a>
           </li>
         </ul>
-      </nav>
-      <ul class="contacts list">
-        <li>
-          <a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li><a class="contacts-link link" href="phone:+380991111111">+38 099 111 11 11</a></li>
-      </ul>
+      </div>
     </header>
     <!--Main section-->
     <main>
       <!--Filter section-->
       <section class="filter">
-        <h1 hidden>Навигация</h1>
-        <ul>
-          <li class="filtr-item">
-            <button type="button">Все</button>
-          </li>
-          <li class="filtr-item">
-            <button type="button">Веб-сайты</button>
-          </li>
-          <li class="filtr-item">
-            <button type="button">Приложения</button>
-          </li>
-          <li class="filtr-item">
-            <button type="button">Дизайн</button>
-          </li>
-          <li class="filtr-item">
-            <button type="button">Маркетинг</button>
-          </li>
-        </ul>
+        <h1 class="visually-hidden">Навигация</h1>
+        <div class="container-filter">
+          <ul>
+            <li class="filter-item">
+              <button type="button">Все</button>
+            </li>
+            <li class="filter-item">
+              <button type="button">Веб-сайты</button>
+            </li>
+            <li class="filter-item">
+              <button type="button">Приложения</button>
+            </li>
+            <li class="filter-item">
+              <button type="button">Дизайн</button>
+            </li>
+            <li class="filter-item">
+              <button type="button">Маркетинг</button>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--Portfolio-->
       <section class="portfolio">
-        <div class="container">
         <h1 class="visually-hidden">Портфолио</h1>
-        <ul class="portfolio-list list">
-          <li class="portfolio-item">
-            <a class="link" href="">
-              <img
-                src="./images/portfolio/img1.jpg"
-                alt="технокряк"
-                class="portfolio-img"
-                width="370"
-                height="294"
-              />
-              <h2 class="title">Технокряк</h2>
-              <p class="text">Веб-сайт</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a class="link" href="">
-              <img
-                src="./images/portfolio/group1.jpg"
-                alt="постер баскетбол"
-                class="portfolio-img"
-                width="370"
-                height="294"
-              />
-              <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-              <p class="text">Дизайн</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a class="link" href="">
-              <img
-                src="./images/portfolio/imgrest.jpg"
-                alt="ресторан"
-                class="portfolio-img"
-                width="370"
-                height="294"
-              />
-              <h2 class="title">Ресторан Seafood</h2>
-              <p class="text">Приложение</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a class="link" href="">
-              <img
-                src="./images/portfolio/imgearfhone.jpg"
-                alt="наушники"
-                class="portfolio-img"
-                width="370"
-                height="294"
-              />
-              <h2 class="title">Проект <span lang="en">Prime</span></h2>
-              <p class="text">Маркетинг</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a class="link" href="">
-              <img
-                src="./images/portfolio/imgbox.jpg"
-                alt="коробки"
-                class="portfolio-img"
-                width="370"
-                height="294"
-              />
-              <h2 class="title">Проект <span lang="en">Boxes</span></h2>
-              <p class="text">Приложение</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a class="link" href="">
-              <img
-                src="./images/portfolio/imgmonitor.jpg"
-                alt="монитор"
-                class="portfolio-img"
-                width="370"
-                height="294"
-              />
-              <h2 class="title" lang="en">Inspiration has no Borders</h2>
-              <p class="text">Веб-сайт</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a class="link" href="">
-              <img
-                src="./images/portfolio/imgbook.jpg"
-                alt="книга"
-                class="portfolio-img"
-                width="370"
-                height="294"
-              />
-              <h2 class="title">Издание <span lang="en">Limited Edition</span></h2>
-              <p class="text">Дизайн</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a class="link" href="">
-              <img
-                src="./images/portfolio/imglab.jpg"
-                alt="бирка"
-                class="portfolio-img"
-                width="370"
-                height="294"
-              />
-              <h2 class="title">Проект <span lang="en">LAB</span></h2>
-              <p class="text">Маркетинг</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a class="link" href="">
-              <img
-                src="./images/portfolio/imglaptop.jpg"
-                alt="ноутбук"
-                class="portfolio-img"
-                width="370"
-                height="294"
-              />
-              <h2 class="title" lang="en">Growing Business</h2>
-              <p class="text">Приложение</p>
-            </a>
-          </li>
-        </ul>
-      </div>
+        <div class="container">
+          <ul class="card-set portfolio-list list">
+            <li class="card-set-item portfolio-item">
+              <a class="link" href="">
+                <img
+                  src="./images/portfolio/img1.jpg"
+                  alt="технокряк"
+                  class="portfolio-img"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolip-wrapper">
+                  <h2 class="title">Технокряк</h2>
+                  <p class="text">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="card-set-item portfolio-item">
+              <a class="link" href="">
+                <img
+                  src="./images/portfolio/group1.jpg"
+                  alt="постер баскетбол"
+                  class="portfolio-img"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolip-wrapper">
+                  <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+                  <p class="text">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="card-set-item portfolio-item">
+              <a class="link" href="">
+                <img
+                  src="./images/portfolio/imgrest.jpg"
+                  alt="ресторан"
+                  class="portfolio-img"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolip-wrapper">
+                  <h2 class="title">Ресторан Seafood</h2>
+                  <p class="text">Приложение</p>
+                </div>
+              </a>
+            </li>
+            <li class="card-set-item portfolio-item">
+              <a class="link" href="">
+                <img
+                  src="./images/portfolio/imgearfhone.jpg"
+                  alt="наушники"
+                  class="portfolio-img"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolip-wrapper">
+                  <h2 class="title">Проект <span lang="en">Prime</span></h2>
+                  <p class="text">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="card-set-item portfolio-item">
+              <a class="link" href="">
+                <img
+                  src="./images/portfolio/imgbox.jpg"
+                  alt="коробки"
+                  class="portfolio-img"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolip-wrapper">
+                  <h2 class="title">Проект <span lang="en">Boxes</span></h2>
+                  <p class="text">Приложение</p>
+                </div>
+              </a>
+            </li>
+            <li class="card-set-item portfolio-item">
+              <a class="link" href="">
+                <img
+                  src="./images/portfolio/imgmonitor.jpg"
+                  alt="монитор"
+                  class="portfolio-img"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolip-wrapper">
+                  <h2 class="title" lang="en">Inspiration has no Borders</h2>
+                  <p class="text">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="card-set-item portfolio-item">
+              <a class="link" href="">
+                <img
+                  src="./images/portfolio/imgbook.jpg"
+                  alt="книга"
+                  class="portfolio-img"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolip-wrapper">
+                  <h2 class="title">Издание <span lang="en">Limited Edition</span></h2>
+                  <p class="text">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="card-set-item portfolio-item">
+              <a class="link" href="">
+                <img
+                  src="./images/portfolio/imglab.jpg"
+                  alt="бирка"
+                  class="portfolio-img"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolip-wrapper">
+                  <h2 class="title">Проект <span lang="en">LAB</span></h2>
+                  <p class="text">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="card-set-item portfolio-item">
+              <a class="link" href="">
+                <img
+                  src="./images/portfolio/imglaptop.jpg"
+                  alt="ноутбук"
+                  class="portfolio-img"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolip-wrapper">
+                  <h2 class="title" lang="en">Growing Business</h2>
+                  <p class="text">Приложение</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!--Footer sectoin-->
     <footer class="footer" id="contacts">
-      <a class="logo" href="" lang="en"><span class="footer-word">Web</span>Studio</a>
-      <address class="contacts-adressa">
-        <ul class="fcontacts-list list">
-          <li class="contacts-item">
-            <a
-              class="contacts-adress"
-              href="https://goo.gl/maps/fYD2F2hj4Bph8xJn6"
-              target="_blank"
-              rel="noopener"
-              >г. Киев, Бульвар Леси Украинки, 26</a
-            >
-          </li>
-          <li class="contacts-item">
-            <a class="contacts-link" href="mailto:info@example.com">info@example.com</a>
-          </li>
-          <li class="contacts-item">
-            <a class="contacts-link" href="phone:+380991111111">+38 099 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a class="logo" href="" lang="en"><span class="footer-word">Web</span>Studio</a>
+        <address class="contacts-adressa">
+          <ul class="fcontacts-list list">
+            <li class="contacts-item">
+              <a
+                class="contacts-adress"
+                href="https://goo.gl/maps/fYD2F2hj4Bph8xJn6"
+                target="_blank"
+                rel="noopener"
+                >г. Киев, Бульвар Леси Украинки, 26</a
+              >
+            </li>
+            <li class="contacts-item">
+              <a class="contacts-link" href="mailto:info@example.com">info@example.com</a>
+            </li>
+            <li class="contacts-item">
+              <a class="contacts-link" href="phone:+380991111111">+38 099 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
