--- a/portfolio.html
+++ b/portfolio.html
@@ -22,10 +22,11 @@
   </head>
   <body>
     <!--Header section-->
-    <header class="header">
+    <header class="header-port">
+      <section class="portfolio-header">
       <div class="container header-section">
         <a class="logo" href="" lang="en"><span class="logo-word">Web</span>Studio</a>
-        <nav>
+        <nav class="navigation" >
           <ul class="site-nav list">
             <li class="header-item">
               <a class="link" href="./index.html">Студия</a>
@@ -38,8 +39,8 @@
             </li>
           </ul>
         </nav>
-      </div>
-      <div class="container-contacts">
+      
+      
         <ul class="contacts list header-container">
           <li class="header-mail">
             <a class="contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -49,6 +50,7 @@
           </li>
         </ul>
       </div>
+    </section>
     </header>
     <!--Main section-->
     <main>
@@ -224,8 +226,10 @@
 
     <!--Footer sectoin-->
     <footer class="footer" id="contacts">
-      <div class="container">
+      <div class="container footer-logo">
         <a class="logo" href="" lang="en"><span class="footer-word">Web</span>Studio</a>
+      </div>
+      <div class="footer-container"
         <address class="contacts-adressa">
           <ul class="fcontacts-list list">
             <li class="contacts-item">
