--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
       <!--Features section-->
       <section class="features" id="studio">
-        <div class="container">
+        <div class="container featere-contr">
           <h2 class="visually-hidden">Студия</h2>
           <ul class="features-list list">
             <li class="features-item">
@@ -122,7 +122,7 @@
       <section class="team-section section">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
-          <ul class="team-listt list">
+          <ul class="team-list list">
             <li class="teaam-item">
               <img
                 src="./images/team/card1.jpg"
@@ -131,8 +131,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="subtitle">Игорь Демьяненко</h3>
-              <p class="team-position" lang="en">Product Designer</p>
+              <div class="description">
+                <h3 class="subtitle">Игорь Демьяненко</h3>
+                <p class="team-position" lang="en">Product Designer</p>
+              </div>
             </li>
             <li class="teaam-item">
               <img
@@ -142,8 +144,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="subtitle">Ольга Репина</h3>
-              <p class="team-position" lang="en">Frontend Develope</p>
+              <div class="description">
+                <h3 class="subtitle">Ольга Репина</h3>
+                <p class="team-position" lang="en">Frontend Develope</p>
+              </div>
             </li>
             <li class="teaam-item">
               <img
@@ -153,8 +157,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="subtitle">Николай Тарасов</h3>
-              <p class="team-position" lang="en">Frontend Develope</p>
+              <div class="description">
+                <h3 class="subtitle">Николай Тарасов</h3>
+                <p class="team-position" lang="en">Frontend Develope</p>
+              </div>
             </li>
             <li class="teaam-item">
               <img
@@ -164,8 +170,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="subtitle">Михаил Ермаков</h3>
-              <p class="team-position" lang="en">UI Designer</p>
+              <div class="description">
+                <h3 class="subtitle">Михаил Ермаков</h3>
+                <p class="team-position" lang="en">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -174,10 +182,8 @@
 
     <!--Footer sectoin-->
     <footer class="footer" id="contacts">
-      <div class="footer-logo">
+      <div class="container">
         <a class="logo" href="" lang="en"><span class="footer-word">Web</span>Studio</a>
-      </div>
-      <div class="footer-container">
         <address class="contacts-adressa">
           <ul class="fcontacts-list list">
             <li class="contacts-item">
