--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
         </div>
       </section>
 
-      <!--About section-->
-      <section class="section no-padding" id="portfolio">
+      <!--About section--> <!--no-padding-->
+      <section class="section about" id="portfolio">
         <div class="container">
           <h2 class="section-title centered">Чем мы занимаемся</h2>
           <ul class="about-list list">
