--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
       <header class="header-port">
             <div class="container header-section">
         <a class="logo" href="" lang="en"><span class="logo-word">Web</span>Studio</a>
-        <nav class="navigation" >
+        <nav class="navigation header-nav" >
           <ul class="site-nav list">
             <li class="header-item">
               <a class="link" href="./index.html">Студия</a>
@@ -105,7 +105,7 @@
                   width="370"
                   height="294"
                 />
-                <div class="portfolip-wrapper">
+                <div class="portfolio-wrapper">
                   <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
                   <p class="text">Дизайн</p>
                 </div>
@@ -120,7 +120,7 @@
                   width="370"
                   height="294"
                 />
-                <div class="portfolip-wrapper">
+                <div class="portfolio-wrapper">
                   <h2 class="title">Ресторан Seafood</h2>
                   <p class="text">Приложение</p>
                 </div>
@@ -135,7 +135,7 @@
                   width="370"
                   height="294"
                 />
-                <div class="portfolip-wrapper">
+                <div class="portfolio-wrapper">
                   <h2 class="title">Проект <span lang="en">Prime</span></h2>
                   <p class="text">Маркетинг</p>
                 </div>
@@ -150,7 +150,7 @@
                   width="370"
                   height="294"
                 />
-                <div class="portfolip-wrapper">
+                <div class="portfolio-wrapper">
                   <h2 class="title">Проект <span lang="en">Boxes</span></h2>
                   <p class="text">Приложение</p>
                 </div>
@@ -165,7 +165,7 @@
                   width="370"
                   height="294"
                 />
-                <div class="portfolip-wrapper">
+                <div class="portfolio-wrapper">
                   <h2 class="title" lang="en">Inspiration has no Borders</h2>
                   <p class="text">Веб-сайт</p>
                 </div>
@@ -180,7 +180,7 @@
                   width="370"
                   height="294"
                 />
-                <div class="portfolip-wrapper">
+                <div class="portfolio-wrapper">
                   <h2 class="title">Издание <span lang="en">Limited Edition</span></h2>
                   <p class="text">Дизайн</p>
                 </div>
@@ -195,7 +195,7 @@
                   width="370"
                   height="294"
                 />
-                <div class="portfolip-wrapper">
+                <div class="portfolio-wrapper">
                   <h2 class="title">Проект <span lang="en">LAB</span></h2>
                   <p class="text">Маркетинг</p>
                 </div>
@@ -210,7 +210,7 @@
                   width="370"
                   height="294"
                 />
-                <div class="portfolip-wrapper">
+                <div class="portfolio-wrapper">
                   <h2 class="title" lang="en">Growing Business</h2>
                   <p class="text">Приложение</p>
                 </div>
