--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
 
     <!--Footer sectoin-->
     <footer class="footer" id="contacts">
-      <div class="container">
-        <a class="logo" href="" lang="en"><span class="footer-word">Web</span>Studio</a>
+      <div class="container container-footer">
+        <a class="footer-logo" href="" lang="en"><span class="footer-word">Web</span>Studio</a>
         <address class="contacts-adressa">
           <ul class="fcontacts-list list">
             <li class="contacts-item">
