--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
         </div>
       </section>
 
-      <!--About section--> <!--no-padding-->
+      <!--About section-->
+      <!--no-padding-->
       <section class="section about" id="portfolio">
         <div class="container">
           <h2 class="section-title centered">Чем мы занимаемся</h2>
