--- a/portfolio.html
+++ b/portfolio.html
@@ -53,29 +53,28 @@
     <main>
       <!--Filter section-->
       <section class="portfolio">
-        <div class="container-filter">
+        <div class="container">
           <h1 class="visually-hidden">Навигация</h1>
           <ul class="filter-nav">
             <li class="filter-item">
-              <button type="button">Все</button>
+              <button class="portfolio-btn" type="button">Все</button>
             </li>
             <li class="filter-item">
-              <button type="button">Веб-сайты</button>
+              <button class="portfolio-btn" type="button">Веб-сайты</button>
             </li>
             <li class="filter-item">
-              <button type="button">Приложения</button>
+              <button class="portfolio-btn" type="button">Приложения</button>
             </li>
             <li class="filter-item">
-              <button type="button">Дизайн</button>
+              <button class="portfolio-btn" type="button">Дизайн</button>
             </li>
             <li class="filter-item">
-              <button type="button">Маркетинг</button>
+              <button class="portfolio-btn" type="button">Маркетинг</button>
             </li>
           </ul>
-        </div>
 
-        <!--Portfolio-->
-        <div class="container">
+          <!--Portfolio-->
+
           <h1 class="visually-hidden">Портфолио</h1>
           <ul class="card-set portfolio-list list">
             <li class="card-set-item portfolio-item">
